--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.10",
     "@next/font": "13.1.6",
-    "cesium": "^1.102.0",
     "daisyui": "^2.50.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-countup": "^6.4.1",
+    "react-d3-library": "^1.1.8",
+    "react-dom": "18.2.0",
+    "react-google-maps": "^9.4.5",
+    "react-toastify": "^9.1.1",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
